# docker-log-extractor

./: .gitignore  README.md  default_test.sh  pyproject.toml
src/: __main__.py  cli.py  logger.py  utils.py
