[tool.poetry]
name = "docker-log-extractor"
version = "0.1.0"
description = ""
authors = ["Kirill Zapyantsev <kirzap123@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
docker = "^6.1.3"
cloudwatch = "^1.2.1"
typer = "^0.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
